--- a/src/css/main.css
+++ b/src/css/main.css
@@ -361,6 +361,9 @@ body{
     background: -webkit-linear-gradient(to right, #16ff5c, #5cfcf4);  /* Chrome 10-25, Safari 5.1-6 */
     background: linear-gradient(to right, #6acdfb, #5cfcac); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */  
 }
+h4{
+    display: none;
+}
 /*Pagina responsica*/
 @media screen and (max-width: 800px){
     .btn-ad{
@@ -447,6 +450,9 @@ body{
 }
 
 @media screen and (max-width: 500px){
+    h4{
+        display: block;
+    }
     :root{
         --boton-padding: 18px 35px;
     }
